        - Now Shows Scenario Objective on the watcher.
        - Shows Bouns Scenario Objective.
        - Fixed with Broken Shore QuestLines a % bar needed coding in.
        - Only Show stage if there is more the one stage (so does not show in dungeons.)
        - Added support to change the font And text size

* Jamba-Quest (A big thanks to Schilm from dual-boxing.com to the new changes. little edited by me )
    - Added buttons to blizzard Quest Rightclick Dropdown Menu to Track and un-track and to abandon all quests.
    -New Bar Now part of the QuestMap Frame. with new buttons
        -Abandon All
            -Works just like it used to. It loops through all of your toons and abandons all the quests on each toon. 
            -Now ignores quests that cannot be abandoned, such as the Account Wide quests Luxlunae mentioned.
        -Share All
            -Used to just loop through the current toons quests and just shared those, NOW loops through all toons and attempts to share all Quests from all toons.
        -Track All
            -Back from the abyss!!!
            -Used to just loop through the current toons quests and just tracked those, NOW loops through all toons and attempts to track all Quests from all toons.
        -Untrack All
            -Back from the abyss!!!
            -Used to just loop through the current toons quests and just untracked those, NOW loops through all toons and attempts to un-tracks all Quests from all toons.    
        
        
*Jamba-Display-Team
    - Values are now Abbreviated to smaller Numbers.
    - No longer Shows max Value when showing Percentage
    - Added support to change the font And text size
    - Added a NewTooltip when you hover over Follow bar to show
        - Level of minion If not level capped.
        - ItemLevel of minion.
        - Durability of the minion.
        - Bag Space of the minion.
        - Gold of the minion.
        - Mail if the minion has mail and who it is from (Same as minimap)