@@ -70,10 +70,10 @@ AJM.settings = {
 		numberOfRows = 2,
 		messageArea = JambaApi.DefaultWarningArea(),
 		itemsAdvanced = {},
-		framePoint = "CENTER",
-		frameRelativePoint = "CENTER",
+		framePoint = "BOTTOMRIGHT",
+		frameRelativePoint = "BOTTOMRIGHT",
 		frameXOffset = 0,
-		frameYOffset = 0,
+		frameYOffset = 80,
 		frameAlpha = 1.0,
 		frameBackgroundColourR = 1.0,
 		frameBackgroundColourG = 1.0,
