@@ -31,16 +31,16 @@ AJM.moduleDisplayName = L["Quest: Tracker"]
 AJM.settings = {
 	profile = {
 		enableQuestWatcher = true,
-		watcherFramePoint = "CENTER",
-		watcherFrameRelativePoint = "CENTER",
+		watcherFramePoint = "RIGHT",
+		watcherFrameRelativePoint = "RIGHT",
 		watcherFrameXOffset = 0,
-		watcherFrameYOffset = 0,
+		watcherFrameYOffset = 150,
 		watcherFrameAlpha = 1.0,
 		watcherFrameScale = 1.0,
 		borderStyle = L["Blizzard Tooltip"],
 		backgroundStyle = L["Blizzard Dialog Background"],
 		watchFontStyle = L["Arial Narrow"],
-		watchFontSize = 12,
+		watchFontSize = 14,
 		hideQuestWatcherInCombat = false,
 		enableQuestWatcherOnMasterOnly = false,
 		watchFrameBackgroundColourR = 0.0,
@@ -52,7 +52,7 @@ AJM.settings = {
 		watchFrameBorderColourB = 0.0,
 		watchFrameBorderColourA = 0.0,
 		watcherListLines = 20,
-		watcherFrameWidth = 300,
+		watcherFrameWidth = 340,
 		unlockWatcherFrame = true,
 		hideBlizzardWatchFrame = true,
 		doNotHideCompletedObjectives = true,
